Selenide logic with API WORKED